# Hebseam_database_01

./: .gitignore  README.md  test.py
01_hebseam_database/: CITATION.cff  LICENSE  README.md  build_benchmark.py  config.yaml  pyproject.toml  requirements.txt  validate_benchmark.py
01_hebseam_database/examples/: sample_truth.json
01_hebseam_database/hebseam_benchmark/: build_benchmark.py  corpus.py  fetch_data.py  validate_benchmark.py
01_hebseam_database/schemas/: truth.schema.json  verse.schema.json
02_hebseam_methods/: README.md  compare.py  config.py  make_comparison_figs.py  make_profile_fig.py  pyproject.toml  requirements.txt  run_all.py
02_hebseam_methods/common/: detection.py  io_utils.py
02_hebseam_methods/methods/: run_classical.py  run_llm_perplexity.py  run_neural.py  run_proposed.py  run_transformer.py
02_hebseam_methods/results/: comparison.csv  comparison.json  scores_classical.json  scores_hebrew_bert.json  scores_llm_perplexity.json  scores_neural.json  scores_proposed.json  scores_transformer.json  stylometric_vocab.json
